Adjust accordion border-width to be thin to prevent flickering when resizing the browser. See https://stackoverflow.com/questions/12547580/borders-disappear-in-chrome-when-i-zoom-in/14242055#14242055

--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -379,3 +379,7 @@ h1 {
   line-height: 1;
   opacity: .5;
 }
+
+.accordion .card {
+  border-width: thin;
+}
